--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ dist-ssr
 *.sw?
 
 # Ignore local environment files
+.env
+.env.*
 .env.local
 .env.development.local
 .env.production.local
-.env*.env
+*.env
