--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.32.0",
     "@imagekit/react": "^5.0.1",
+    "@tanstack/react-query": "^5.81.0",
+    "@uiw/react-md-editor": "^4.0.7",
+    "axios": "^1.10.0",
+    "imagekitio-react": "^4.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
